[tool.poetry]
name = "test-discord-bot-with-koyeb"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
requests = "^2.32.3"
discord-py-interactions = "^5.13.2"
discord-py = "^2.4.0"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
pandas = "^2.2.2"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
